--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ h1 {
 }
 h5 {
     margin-bottom: 0.1em;
-    font-style: bold;
+    font-style: italic;
 }
 div.subheading {
     text-align: center;
