--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
 }
 h1 {
     text-align: center;
-    font-family: fantasy;
+    font-family: monospace;
 }
 h5 {
     margin-bottom: 0.1em;
